Enhanced UI and added history

--- a/index.html
+++ b/index.html
@@ -4,79 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizzer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="quiz-container">
-        <!-- Header -->
-        <div class="header">
-            <button id="home-button" class="hidden">Home</button>
-            <div class="spacer"></div>
-            <button id="dark-mode-toggle">🌙</button>
-        </div>
-
-        <!-- Start Screen -->
-        <div id="start-screen">
-            <h1>Welcome to Quizzer</h1>
-            <p>Drag and drop your JSON file onto the button, or click to select.</p>
-            <button id="upload-button">Upload JSON File</button>
-            <input type="file" id="file-input" accept=".json" class="hidden">
-        </div>
-
-        <!-- Mode Selection Screen (appears after upload) -->
-        <div id="mode-screen" class="hidden">
-            <h2>Choose how you want to proceed</h2>
-            <div class="mode-buttons">
-                <button id="review-mode-button">Review Answers</button>
-                <button id="take-mode-button">Take Quiz</button>
-            </div>
-        </div>
-
-        <!-- Quiz Screen -->
-        <div id="quiz-screen" class="hidden">
-            <div id="progress-container">
-                <div id="progress-bar"></div>
-            </div>
-            <p id="progress-text"></p>
-
-            <div id="timer-container">
-                <p>Time left: <span id="question-timer">180</span>s</p>
-                <p>Total Time: <span id="global-timer-display">0s</span></p>
-            </div>
-
-            <div id="question-container">
-                <p id="question-text"></p>
-
-                <!-- MCQ Options -->
-                <div id="options-container"></div>
-
-                <!-- Written Answer Input -->
-            <textarea id="written-answer" class="hidden" placeholder="Type your answer here"></textarea>
-            </div>
-
-            <button id="next-button" class="hidden">Next</button>
-        </div>
-
-        <!-- Result Screen -->
-        <div id="result-screen" class="hidden">
-            <h2>Quiz Complete!</h2>
-            <p>Your score is: <span id="score"></span></p>
-            <p>Total time: <span id="global-timer"></span></p>
-
-            <!-- Written Results Container -->
-            <div id="written-results-container" class="hidden">
-                <h3>Written Answers</h3>
-                <div id="written-answers-display"></div>
-                <button id="copy-written-button">Copy Answers</button>
-            </div>
-
-            <button id="retake-button">Retake Quiz</button>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
+    <quizzer-app></quizzer-app>
+    <script type="module" src="./src/app.js"></script>
 </body>
 </html>
